--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');
-
+*::-webkit-scrollbar{
+  display: none;
+}
 *{
   font-family: 'Josefin Sans', sans-serif;
   outline: none;
