--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,6 @@
   border: 1px solid grey;
   border-radius: 50%;
 }
+.back-ground-gradient{
+  background: linear-gradient(90deg, hsl(192, 100%, 67%) 0%, hsl(280, 87%, 65%) 100%);
+}
